<resources>
    <string name="app_name">My Personal Diary</string>
    <string name="mybutton">myButton</string>
    <string name="hello_user">Hello User</string>
    <string name="first_activity">first activity</string>
    <string name="log_out">log out</string>
    <string name="digital_diary">Digital\nDiary</string>
    <string name="enter">Enter</string>
    <string name="welcome_to_your_diary">Welcome to\nYour Diary</string>
    <string name="new_entry">New Entry</string>
    <string name="update_entry">Update Entry</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="view_all_entry">View All Entry</string>
    <string name="go_back">Log Out</string>
    <string name="item1_main">Main Menu</string>
    <string name="help">Help</string>
    <string name="contact_us">contact us</string>
    <string name="login_via_google">Login via Google</string>
    <string name="s_no">S.no</string>
    <string name="customer_name">Name</string>
    <string name="customer_product">product</string>
    <string name="product_quantity">quantity</string>
    <string name="product_date">Date</string>
    <string name="product_price">price</string>
    <string name="product_paid">paid</string>
    <string name="product_balance">balance</string>
    <string name="product_interest">interest</string>
    <string name="product_gaurantee">Warranty</string>
    <string name="product_next_installment">Installment</string>
    <string name="product_payment_left">balance</string>
    <string name="date_added">Date</string>
    <string name="dialogue_custaddress">address</string>
    <string name="s_number">s.no</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="add_a_new_entry">Add\nNew Entry</string>
    <string name="welcome_to_your_smart_diary">Welcome To Your Smart Diary</string>
    <string name="are_u_sure">Are u sure?</string>
    <string name="delete_no">No</string>
    <string name="delete_yes">Yes</string>
    <string name="add_entry_main">add new entry</string>
</resources>
