<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="1dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp"

    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/new_background_see"
        android:layout_height="match_parent">

        <!--INPUT VIEWS-->

 <android.support.design.widget.TextInputEditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="22dp"
     android:hint="@string/customer_name"
     android:layout_marginTop="15sp"
     android:id="@+id/dialogue_custname"/>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:hint="@string/dialogue_custaddress"
            android:id="@+id/dialogue_custaddress"/>


        <android.support.design.widget.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:hint="@string/customer_product"
            android:id="@+id/dialogue_custproduct"/>

        <android.support.design.widget.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:hint="@string/product_quantity"
            android:inputType="number"
            android:id="@+id/dialogue_custquantity"/>
        <android.support.design.widget.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:hint="@string/product_price"
            android:inputType="number"
            android:id="@+id/dialogue_custprice"/>
        <android.support.design.widget.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:hint="@string/product_paid"
            android:inputType="number"
            android:id="@+id/dialogue_custpaid"/>

        <android.support.design.widget.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:hint="@string/product_payment_left"
            android:inputType="number"
            android:id="@+id/dialogue_custpayment_left"/>
        <android.support.design.widget.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:hint="@string/product_gaurantee"
            android:id="@+id/dialogue_custgaurantee"/>

        <android.support.design.widget.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:hint="@string/product_next_installment"
            android:id="@+id/dialogue_custnext_installment"/>



        <!--BUTTON-->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save"
            android:clickable="true"
            android:background="@color/colorAccent"
            android:layout_marginTop="40dp"/>


    </LinearLayout>

</android.support.v7.widget.CardView>
