<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/myown_background"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:elevation="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/epic_gradient"
            android:padding="15dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"

                android:id="@+id/tableRowID"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/edit_button_detail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="25dp"
                    android:background="@android:drawable/ic_menu_edit" />

                <Button
                    android:id="@+id/delete_button_detail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/ic_delete_black" />

            </TableRow>

            <TextView
                android:id="@+id/recycler_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tableRowID"
                android:hint="@string/customer_name"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/recyler_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recycler_name"
                android:layout_marginTop="10dp"
                android:hint="@string/dialogue_custaddress"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/recycler_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/recyler_address"
                android:layout_marginTop="10dp"
                android:hint="@string/customer_product"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/recycler_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/recycler_product"
                android:layout_marginTop="10dp"
                android:hint="@string/product_quantity"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/recycler_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/recycler_quantity"
                android:layout_marginTop="10dp"
                android:hint="@string/product_price"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/recycler_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/recycler_price"
                android:layout_marginTop="10dp"
                android:hint="@string/product_paid"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/recycler_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/recycler_paid"
                android:layout_marginTop="10dp"
                android:hint="@string/product_balance"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/recycler_warranty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/recycler_balance"
                android:layout_marginTop="10dp"
                android:hint="@string/product_gaurantee"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/recycler_installment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/recycler_warranty"
                android:layout_marginTop="10dp"
                android:hint="@string/product_next_installment"
                android:textSize="24sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/recycler_date_added"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/recycler_installment"
                android:layout_marginTop="10dp"
                android:text="@string/date_added"
                android:textSize="22sp" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>