<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_gradient"
    tools:context="com.hritik.hchok.mypersonaldiary.activities.Activities.DetailsActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="541dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.362">

        <RelativeLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:background="@drawable/myown_background"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/edit_button_detail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="25dp"
                    android:background="@android:drawable/ic_menu_edit" />

                <Button
                    android:id="@+id/delete_button_detail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/ic_delete_black" />

            </TableRow>

            <TextView
                android:id="@+id/item_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/customer_name"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/item_detail_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_detail_name"
                android:layout_marginTop="15dp"
                android:text="@string/dialogue_custaddress"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/item_detail_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_detail_address"
                android:layout_marginTop="15dp"
                android:text="@string/customer_product"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/item_detail_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_detail_product"
                android:layout_marginTop="15dp"
                android:text="@string/product_quantity"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/item_detail_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_detail_quantity"
                android:layout_marginTop="15dp"
                android:text="@string/product_price"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/item_detail_paid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_detail_price"
                android:layout_marginTop="15dp"
                android:text="@string/product_paid"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/item_detail_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_detail_paid"
                android:layout_marginTop="15dp"
                android:text="@string/product_balance"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/item_detail_warranty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_detail_balance"
                android:layout_marginTop="15dp"
                android:text="@string/product_gaurantee"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/item_detail_installment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_detail_warranty"
                android:layout_marginTop="15dp"
                android:text="@string/product_next_installment"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/item_detail_date_added"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_detail_installment"
                android:layout_marginTop="15dp"
                android:text="@string/date_added"
                android:textSize="24sp"
                android:textStyle="bold|italic" />




        </RelativeLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>
