<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:elevation="5dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="25dp">
    <TextView
        android:id="@+id/recycler_name"
        android:layout_width="87dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:hint="@string/customer_name"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        />

    <TextView
        android:id="@+id/recyler_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recycler_name"
        android:layout_marginTop="10dp"
        android:hint="@string/dialogue_custaddress"
        android:textSize="24sp"

        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/recycler_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recyler_address"
        android:layout_marginTop="10dp"
        android:hint="@string/customer_product"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        />


    <TextView
        android:id="@+id/recycler_date_added"
        android:layout_width="79dp"
        android:layout_height="34dp"
        android:layout_below="@+id/recycler_product"
        android:layout_marginTop="10dp"
        android:text="@string/date_added"
        android:textSize="22sp"
        />
</LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>